<resources>
    <string name="app_name">Festival Post</string>
    <string name="lbl_set_profile_photo">Choose Image</string>
    <string name="lbl_take_camera_picture">Camera</string>
    <string name="toast_image_intent_null">Null</string>
    <string name="lbl_choose_from_gallery">Gallery</string>
    <string name="txt_dont_account">Don\'t an have account?</string>
    <string name="txt_dont_otp">Don\'t receive OTP ?</string>
    <string name="txt_signup">Sign up</string>
    <string name="txt_already_account">Already have account an?</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_send_otp">Send OTP</string>
    <string name="token1">$2y$12$nUChH26o.QDdtsssLics.uYWX9epDzrR5R85u4HW1VuAbTY45WUqC</string>
    <string name="url_name">http://festivalpost.in/admin/api/</string>
    <string name="txt_resend_otp"><u>Resend OTP</u></string>
    <string name="txt_email">Enter your email</string>
    <string name="txt_mobile_number" translatable="false">Enter your mobile number</string>
    <string name="txt_otp">Enter your OTP</string>
    <string name="txt_name">Enter your name</string>
    <string name="txt_referal">Enter your referal code (If you have)</string>
    <string name="txt_next">Next</string>
    <string name="txt_home">Home</string>
    <string name="txt_days">Days</string>
    <string name="txt_post">Post</string>
    <string name="txt_festival">Festival</string>
    <string name="txt_today_festival">Today\'s Festival</string>
    <string name="txt_current_incidents">Other Categories</string>
    <string name="txt_this_month_festival">This month Festivals</string>
    <string name="txt_previous">Previous</string>
    <string name="txt_account">Account</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_manage_business_details">Manage Business Details</string>
    <string name="txt_referal_code">Referral Code</string>
    <string name="txt_share_app">Share App</string>
    <string name="txt_rate_us">Rate Us</string>
    <string name="txt_help_support">Help and Support</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="txt_logout">Logout</string>
    <string name="txt_save">Save</string>
    <string name="txt_share_on_social">Share on social media</string>
    <string name="txt_custom">Custom</string>
    <string name="txt_business_name">Enter your business name</string>
    <string name="txt_business_email">Enter your business email</string>
    <string name="txt_business_phone">Enter your business phone number</string>
    <string name="txt_business_website">Enter your business website</string>
    <string name="txt_business_address">Enter your business address</string>
    <string name="txt_finish">Finish</string>
    <string name="txt_your_mobile_number">Your Mobile Number</string>
    <string name="txt_greetings">Greetings</string>
    <string name="txt_video">Video</string>
    <string name="txt_digitalcard">Digital Card</string>
    <string name="lbl_first_plan">$ 1199 Rs./ </string>
    <string name="lbl_three_months">3 months</string>
    <string name="lbl_purchase">Purchase</string>
    <string name="lbl_use_all_videos1"><![CDATA[- 3000+ images ]]></string>
    <string name="lbl_use_all_images2"><![CDATA[- 300+ Videos ]]></string>
    <string name="lbl_use_all_videos3">- Use All Custom frame</string>
    <string name="lbl_use_all_videos4"><![CDATA[- Use all Greetings frames]]></string>
    <string name="lbl_use_all_videos5">- Remove Watermark</string>
    <string name="lbl_use_all_videos6">- Save unlimited Festival images and videos.</string>
    <string name="lbl_premium_plan">Premium Plan</string>
    <string name="lbl_plan_two"><strike>3299 Rs.</strike></string>
    <string name="lbl_offer">*Offer valid till 26th January</string>
</resources>