<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_350sdp"
        android:visibility="gone"
        android:layout_marginStart="@dimen/spacing_middle"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginEnd="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_standard_new"
        android:background="@drawable/bg_blue"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/tvPlanName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_premium_plan"
            android:fontFamily="@font/sf_ui_medium"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="@dimen/_28sdp"
            android:gravity="center"
            android:textAllCaps="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_plan_two"
            android:fontFamily="@font/sf_ui_medium"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp"
            android:gravity="center"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

        <TextView
            android:id="@+id/tvPlanPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_first_plan"
            android:fontFamily="@font/sf_ui_medium"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp"
            android:gravity="center"
            android:textAllCaps="false"
            />

            <TextView
                android:id="@+id/tvPlanmonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_three_months"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|bottom"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:gravity="bottom"

                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_offer"
            android:fontFamily="@font/sf_ui_medium"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            android:gravity="center"
            android:textAllCaps="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp"

            android:gravity="center|start"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_gravity="center|start"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_use_all_videos1"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|start"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"

                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_use_all_images2"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|start"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_use_all_videos3"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|start"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"

                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_use_all_videos4"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|start"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:gravity="center|start"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_use_all_videos5"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|start"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:gravity="center"

                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_use_all_videos6"
                android:fontFamily="@font/sf_ui_medium"
                android:layout_gravity="center|start"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:gravity="center|start"

                />

        </LinearLayout>








    </LinearLayout>

    <TextView
        android:id="@+id/tvPurchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_purchase"
        android:fontFamily="@font/sf_ui_medium"
        android:layout_gravity="center"
        android:drawableRight="@drawable/ic_baseline_arrow_right_alt_24"
        android:drawableTint="@color/white"
        android:drawablePadding="@dimen/_10sdp"
        android:background="@drawable/bg_gradient"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        android:padding="@dimen/_15sdp"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"

        />

    <ImageView
        android:id="@+id/iv_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/_5sdp"
        android:src="@drawable/ic_phone"

        />


</LinearLayout>