<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"

    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">



            <TextView
                android:id="@+id/tvtitle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/txt_signup"
                android:textStyle="bold"
                android:textSize="@dimen/_16ssp"/>

            <TextView
                android:id="@+id/tvaction"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/small_button_bg"
                android:text="@string/txt_custom"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:textSize="14dp" />
        </LinearLayout>



    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/ivlogo"
                android:layout_gravity="center"
                android:padding="@dimen/_2sdp"
                android:layout_margin="15dp"
                android:src="@drawable/uploadelogo"
                android:background="@drawable/rect_bg"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <TextView
                android:layout_marginTop="8dp"
                android:text="@string/txt_business_name"
                style="@style/hintStyle" />

            <EditText
                android:inputType="text"
                android:id="@+id/edname"
                android:hint="@string/txt_business_name"
                android:imeOptions="actionNext"
                style="@style/edittextStyle"/>

            <TextView
                android:layout_marginTop="12dp"
                android:text="@string/txt_business_email"
                style="@style/hintStyle" />

            <EditText
                android:id="@+id/edemail"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_business_email"
                android:imeOptions="actionNext"
                style="@style/edittextStyle"/>

            <TextView
                android:layout_marginTop="12dp"
                android:text="@string/txt_business_phone"
                style="@style/hintStyle" />

            <EditText
                android:inputType="phone"
                android:id="@+id/edphone"
                android:digits="0123456789"
                android:maxLength="10"
                android:hint="@string/txt_business_phone"
                android:imeOptions="actionNext"
                style="@style/edittextStyle"/>
            <TextView
                android:layout_marginTop="12dp"
                android:text="@string/txt_business_website"
                style="@style/hintStyle" />

            <EditText
                android:inputType="textWebEditText"
                android:id="@+id/edwebsite"
                android:hint="@string/txt_business_website"
                android:imeOptions="actionNext"
                style="@style/edittextStyle"/>


            <TextView
                android:layout_marginTop="12dp"
                android:text="@string/txt_business_address"
                style="@style/hintStyle" />

            <EditText
                android:inputType="text"
                android:id="@+id/edaddress"
                android:hint="@string/txt_business_address"
                android:imeOptions="actionDone"
                style="@style/edittextStyle"/>

        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnsubmit"
        android:text="@string/txt_finish"
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="20dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        style="@style/buttonStyle"/>

</LinearLayout>